force-app/main/default/objects/Fulfillment_Order_Productt__c/Fulfillment_Order_Productt__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Order Productt</label>
    <nameField>
        <label>Fulfillment Order Productt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillment Order Productts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>