force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment Order Productts</relationshipLabel>
    <relationshipName>Fulfillment_Order_Productts</relationshipName>
    <type>Lookup</type>
</CustomField>