force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_ASIN__c.field-meta.xml
<CustomField>
    <fullName>Amazon_ASIN__c</fullName>
    <label>Amazon ASIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>