force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Delivery_Status__c</fullName>
    <label>Amazon Delivery Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>