force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_fulfillment_channel__c.field-meta.xml
<CustomField>
    <fullName>Amazon_fulfillment_channel__c</fullName>
    <label>Amazon fulfillment channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>