force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_is_business_order__c.field-meta.xml
<CustomField>
    <fullName>Amazon_is_business_order__c</fullName>
    <label>Amazon is-business-order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>