force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Item_Status__c</fullName>
    <label>Amazon Item Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>