force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Order_ID__c</fullName>
    <label>Amazon Order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>