force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Order_Status__c</fullName>
    <label>Amazon Order Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>