force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Sales_Channel__c</fullName>
    <label>Amazon Sales Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>