force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_ship_service_level__c.field-meta.xml
<CustomField>
    <fullName>Amazon_ship_service_level__c</fullName>
    <label>Amazon ship service level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>