force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Amazon_signature_confirmation_recommende__c.field-meta.xml
<CustomField>
    <fullName>Amazon_signature_confirmation_recommende__c</fullName>
    <label>Amazon signature confirmation recommende</label>
    <length>100</length>
    <type>Text</type>
</CustomField>