force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Fulfillment Order Productts</relationshipLabel>
    <relationshipName>Fulfillment_Order_Productts</relationshipName>
    <type>Lookup</type>
</CustomField>