force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Carrier_URL__c.field-meta.xml
<CustomField>
    <fullName>Carrier_URL__c</fullName>
    <label>Carrier URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>