force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fulfillment_Order_Productts</relationshipName>
    <type>Lookup</type>
</CustomField>