force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Date__c</fullName>
    <label>Delivered Date</label>
    <type>DateTime</type>
</CustomField>