force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Delivery_SLA__c.field-meta.xml
<CustomField>
    <fullName>Delivery_SLA__c</fullName>
    <label>Delivery SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>