force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Displayable_Order_Comment__c.field-meta.xml
<CustomField>
    <fullName>Displayable_Order_Comment__c</fullName>
    <label>Displayable Order Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>