force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Extra_Information__c.field-meta.xml
<CustomField>
    <fullName>Extra_Information__c</fullName>
    <label>Extra Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>