force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Fulfilled_To_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Address_Line1__c</fullName>
    <formula>Fulfillment_Order__r.Fulfill_To_Address_Line1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled To Address Line1</label>
    <type>Text</type>
</CustomField>