force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Fulfilled_to_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_to_Address_Line2__c</fullName>
    <formula>Fulfillment_Order__r.Fulfilled_to_Address_Line2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled to Address Line2</label>
    <type>Text</type>
</CustomField>