force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Fulfilled_To_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Address_Postal_Code__c</fullName>
    <formula>Fulfillment_Order__r.Fulfilled_To_Address_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled To Address Postal Code</label>
    <type>Text</type>
</CustomField>