force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Fulfilled_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_To_Email_Address__c</fullName>
    <formula>Fulfillment_Order__r.Fulfilled_To_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled To Email Address</label>
    <type>Text</type>
</CustomField>