force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Fulfillment_Order__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order__c</fullName>
    <label>Fulfillment Order</label>
    <referenceTo>Fulfillment_Order__c</referenceTo>
    <relationshipLabel>Fulfillment Order Productts</relationshipLabel>
    <relationshipName>Fulfillment_Order_Productts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>