force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Fulfillment_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order_Product__c</fullName>
    <displayFormat>A-{00}</displayFormat>
    <label>Fulfillment Order Product</label>
    <type>AutoNumber</type>
</CustomField>