force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Invoice_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_1__c</fullName>
    <label>Invoice Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>