force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>InvoiceLine</referenceTo>
    <relationshipLabel>Fulfillment Order Productts</relationshipLabel>
    <relationshipName>Fulfillment_Order_Productts</relationshipName>
    <type>Lookup</type>
</CustomField>