force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Item_Information__c.field-meta.xml
<CustomField>
    <fullName>Item_Information__c</fullName>
    <label>Item Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>