force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Line_Subtotal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Subtotal_Tax__c</fullName>
    <label>Line Subtotal Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>