force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Marketplace_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_ID__c</fullName>
    <label>Marketplace ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>