force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Merchant_SKU__c.field-meta.xml
<CustomField>
    <fullName>Merchant_SKU__c</fullName>
    <label>Merchant SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>