force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/MerchantFulfillmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>MerchantFulfillmentOrderID__c</fullName>
    <formula>Fulfillment_Order__r.Id &amp; &quot;-&quot; &amp; TEXT(YEAR(DATEVALUE(Fulfillment_Order__r.Order_Date__c))) &amp; TEXT (MONTH((DATEVALUE(Fulfillment_Order__r.Order_Date__c)))) &amp; TEXT(DAY((DATEVALUE(Fulfillment_Order__r.Order_Date__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MerchantFulfillmentOrderID</label>
    <type>Text</type>
</CustomField>