force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/MerchantFulfillmentOrderItemID__c.field-meta.xml
<CustomField>
    <fullName>MerchantFulfillmentOrderItemID__c</fullName>
    <formula>Id &amp; &quot;-&quot; &amp;TEXT(YEAR(DATEVALUE(Fulfillment_Order__r.Order_Date__c)))&amp;TEXT(MONTH(DATEVALUE(Fulfillment_Order__r.Order_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MerchantFulfillmentOrderItemID</label>
    <type>Text</type>
</CustomField>