force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Fulfillment Order Productts</relationshipLabel>
    <relationshipName>Fulfillment_Order_Productts</relationshipName>
    <type>Lookup</type>
</CustomField>