force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Order_Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Summary__c</fullName>
    <label>Order Product Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>