force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Package_Number__c.field-meta.xml
<CustomField>
    <fullName>Package_Number__c</fullName>
    <label>Package Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>