force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Prefered_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Shipping_Date__c</fullName>
    <formula>Fulfillment_Order__r.Preffered_Shipping_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefered Shipping Date</label>
    <type>Date</type>
</CustomField>