force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Pretax_Total__c.field-meta.xml
<CustomField>
    <fullName>Pretax_Total__c</fullName>
    <label>Pretax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>