force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Products_Name__c.field-meta.xml
<CustomField>
    <fullName>Products_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Name</label>
    <type>Text</type>
</CustomField>