force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Quantity_on_the_Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_the_Original_Order__c</fullName>
    <label>Quantity on the Original Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>