force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Quantity_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_of_Measure__c</fullName>
    <label>Quantity Unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>