force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/ShipBob_OrderId__c.field-meta.xml
<CustomField>
    <fullName>ShipBob_OrderId__c</fullName>
    <label>ShipBob OrderId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>