force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Shipbob_Response__c.field-meta.xml
<CustomField>
    <fullName>Shipbob_Response__c</fullName>
    <label>Shipbob Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>