force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/ShipBob_ShipmentId__c.field-meta.xml
<CustomField>
    <fullName>ShipBob_ShipmentId__c</fullName>
    <label>ShipBob ShipmentId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>