force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/ShipBob_Status__c.field-meta.xml
<CustomField>
    <fullName>ShipBob_Status__c</fullName>
    <label>ShipBob Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>