force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>