force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Total_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_with_Tax__c</fullName>
    <label>Total with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>