force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Change (Charge)</fullName>
            </value>
            <value>
                <fullName>Order Product (Product)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>