force-app/main/default/objects/Fulfillment_Order_Productt__c/fields/Unit_Number_Apartment_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_Apartment_Number__c</fullName>
    <formula>IF(
  ISBLANK(Fulfillment_Order__r.Unit_Number_Apartment_Number__c),
  0,
  VALUE(Fulfillment_Order__r.Unit_Number_Apartment_Number__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number/Apartment Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>